# SandBox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md  SandBoxConfig.h.in
.github/workflows/: cmake-single-platform.yml
src/: main.cpp
src/answer/: AliveAnswer.hpp
src/error/: Errors.hpp
src/exception/: BaseException.cpp
src/include/: BaseException.h  Runner.h  Server.h  ThreadInfo.hpp  Worker.h  restrict.h  status.hpp  types.hpp
src/restrict/: restrict.cpp  restrict.h  seccomp_rule.cpp  seccomp_rule.h
src/runner/: Runner.cpp  Runner.h  Worker.cpp
src/server/: Server.cpp  WebServer.cpp  WebServer.h  server.cpp  server.h
src/tools/: SandBox.hpp
